--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iPhone - Apple</title>
-    <link rel="icon" href="./Images/Logomain.jpg" type="image/x-icon">
+    <link rel="icon" href="./Logomain.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
